--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- FONT LINK -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- FontAwesome -->
         <script src="https://kit.fontawesome.com/58e1ebb4d2.js" crossorigin="anonymous"></script>
     <!-- CSS LINK -->
@@ -18,8 +18,32 @@
         <link rel="stylesheet" href="./css/debug.css">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/responsive.css">
+        <link rel="stylesheet" href="./css/root.css">
     </head>
     <body>
+        <!-- WEB APP LAYOUT -->
+        <div class="container">
+                <!-- SIDE BAR SPOTIFY -->
+            <div class="container__sidebar">
+                ciao
+            </div>
+                <!-- CONTAINER CON HEADER MOBILE E MAIN -->
+            <div class="container__main-content">
+                <header class="main-content__header">
+                    ciao
+                </header>
+                <div class="main-content__main">
+                    cioaoo
+                </div>
+            </div>
+        </div>
+            <!-- FOOTER -->
+        <footer class="footer">
+            footer
+        </footer>
+
+
+
 
 
 
