--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/responsive.css">
         <link rel="stylesheet" href="./css/root.css">
+        <link rel="stylesheet" href="./css/aligner.css">
     </head>
     <body>
         <!-- WEB APP LAYOUT -->
