aggiunti classi di sidebar

--- a/index.html
+++ b/index.html
@@ -22,13 +22,42 @@
         <link rel="stylesheet" href="./css/aligner.css">
     </head>
     <body>
-        <!-- WEB APP LAYOUT -->
+        <!-- ************************** WEB APP LAYOUT **************************-->
         <div class="container">
-                <!-- SIDE BAR SPOTIFY -->
+
+                <!-- ************************** SIDE BAR SPOTIFY ************************** -->
             <div class="container__sidebar">
-                ciao
+                    <!-- LOGO -->
+                <div class="sidebar__logo">
+                    <img src="./img/logo.svg" alt="Logo">
+                </div>
+                    <!-- SIDE NAVIGATORE -->
+                <div class="sidebar__navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">Home</li>
+                        <li class="navigation__item">Cerca</li>
+                    </ul>
+                </div>
+                    <!-- SIDE LIBRARY -->
+                <div class="sidebar__library">
+                    La mia libreria
+                </div>
+                <div class="sidebar__create-playlist">
+                    Crea Playlist
+                </div>
+                    <!-- BARRA RICERCA -->
+                <div class="sidebar__search-bar">
+                </div>
+                    <!-- LISTA PLAYLIST -->
+                <div class="sidebar__playlists">
+                    <ul class="playlists__list">
+                        <li class="playlists__item">Playlist 1</li>
+                        <li class="playlists__item">Playlist 2</li>
+                    </ul>
+                </div>
             </div>
-                <!-- CONTAINER CON HEADER MOBILE E MAIN -->
+
+                <!-- ************************** CONTAINER CON HEADER MOBILE E MAIN ************************** -->
             <div class="container__main-content">
                 <header class="main-content__header">
                     ciao
@@ -38,7 +67,8 @@
                 </div>
             </div>
         </div>
-            <!-- FOOTER -->
+        
+            <!-- ************************** FOOTER ************************** -->
         <footer class="footer">
             footer
         </footer>
