--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
                         <li class="playlists__item">Playlist 2</li>
                     </ul>
                 </div>
+                <div class="nomenome">
+                    <div>
+                        <i class="fas fa-download"></i> <!-- Icona per installare l'app -->
+                        <div>installa app</div>
+                    </div>
+                    <hr>
+                    <div>
+                        <i class="fas fa-user"></i> <!-- Icona utente per "John Doe" -->
+                        <div>John Doe</div>
+                    </div>
+                </div>
+
             </div>
             <!-- ************************** CONTAINER CON HEADER MOBILE E MAIN ************************** -->
             <div class="container__main-content">
