completato Hoover main hoover side e footer

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/Tim henson.jpg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -141,6 +142,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/psicologi.jpg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -150,6 +152,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/psicolig2.jpg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -159,6 +162,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/ariete.jpg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -168,6 +172,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/jojosiwa.png" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -177,6 +182,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/calcutta-relax.jpg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -194,6 +200,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/radar.jpeg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -203,6 +210,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/mixdaily.jpeg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -220,6 +228,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/youg.jpeg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -229,6 +238,7 @@
                         <div class="main-content__recent-item">
                             <div class="recent-item__image">
                                 <img src="./img/einaudi.jpeg" alt="">
+                                <i class="fas fa-play recent-item__play-icon"></i>
                             </div>
                             <div class="recent-item__info">
                                 <h3 class="recent-item__title">Titolo</h3>
@@ -280,4 +290,5 @@
             </div>
         </footer>
     </body>
+    
 </html>
