Aggiornamenti, Commenti su READme

--- a/index.html
+++ b/index.html
@@ -276,7 +276,10 @@
                 </div>
                 <div class="controls__progress">
                     <div class="progress__time">0:25</div>
-                    <div class="progress__bar"><div class="progress__bar--white-space"></div></div>
+                    <div class="progress__bar">
+                        <div class="progress__bar--white-space"></div>
+                        <div class="pallina"></div>
+                    </div>
                     <div class="progress__time">4:45</div>
                 </div>
             </div>
